develop: fix project compilation errors