@@ -38,8 +38,12 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>21</source>
-          <target>21</target>
+          <source>23</source>
+          <target>23</target>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>java.desktop</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
